feat: create method to delete file and your documentation
