# src/Api/Controllers/files/DeleteFilesUseController.ts
@@ -1,5 +1,16 @@
+import { DeleteFilesUseCase } from "@Applications/UseCases/files/DeleteFilesUseCase";
+import { container } from "@IoC/index";
+import { Request, Response } from "express";
 
 
 export class DeleteFilesController {
-  
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { userId, folderId } = request.query;
+
+    const deleteFilesUseCase = container.get(DeleteFilesUseCase);
+
+    await deleteFilesUseCase.execute(userId as string, folderId as string);
+
+    return response.status(204).send();
+  }
 }
